EPMRPP-97554 || Fixed Notifications z-index (#4143)
* EPMRPP-97554 || Fixed Notifications z-index

* EPMRPP-97554 || crf - 1

--- a/app/src/components/main/notification/notificationList/notificationList.scss
+++ b/app/src/components/main/notification/notificationList/notificationList.scss
@@ -21,6 +21,7 @@
   opacity: 0.8;
   max-width: 600px;
   transform: translateX(-50%);
+  z-index: $Z-INDEX-POPUP;
 }
 
 .notification-item-wrapper {
